--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,8 +1,9 @@
-.topHeader,.bottomHeader,.footer{
+.topHeader,.bottomHeader,.footer,.bottomHeaderSm{
     background-color: #F44336;
 }
-.footer a,.footer p {
+.footer a,.footer p,table a,a:hover {
     color:white;
+    text-decoration: none;
 }
 .header_mid{
     background-image:url("http://geeks.e-consulta.com/wp-content/uploads/2017/04/trabajo-en-equipo3-1000x620.png");
@@ -16,3 +17,10 @@
     padding-top: 40px;
     padding-bottom: 40px;
 }
+
+td{
+    width: 200px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
