--- a/chooseDepartment.css
+++ b/chooseDepartment.css
@@ -5,12 +5,15 @@
     color:white;
 }
 
-@keyframes example{
+/*@keyframes example{
     from{background-color: red;}
     to{background-color: blue;}
 }
 
 .block7{
     animation:example 4s infinite;
+}*/
+.block2,.block4,.block6,.block8,.block10,.block12,.block14,.block16{
+	background-color:#F44336;
 }
 
