--- a/contactUs.css
+++ b/contactUs.css
@@ -1,19 +1,13 @@
 .topHeader,.bottomHeader,.footer,.bottomHeaderSm{
     background-color: #F44336;
 }
-.bottomHeaderSm td{
-    width: 200px;
-    margin-right: auto;
-    margin-left: auto;
-}
-.footer a,.footer p,table a,a:hover {
+.footer a,.footer ,a:hover {
     color:white;
     text-decoration: none;
 }
+
 td{
+    width: 200px;
     margin-right: auto;
     margin-left: auto;
-}
-a{
-    text-decoration: none;
 }
